fixing navbar spacing

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
     font-family: "Trebuchet MS", sans-serif;
 }
+body, html {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
 nav {
     background-color: #333;
     height: 70px;
@@ -14,7 +19,10 @@ nav {
     align-items: center;
     gap: 8px 30px;
 }
-nav a {
+nav ul li {
+    display: inline;
+}
+nav ul a {
     color: #a0a0a0;
     text-decoration: none;
     padding: 0 20px;
@@ -22,9 +30,9 @@ nav a {
     position: relative;
     transition: 0.2s;
     align-items: center;
-    float: center;
+    display: inline-block;
 }
-nav a:after {
+nav ul a:after {
     content: "";
     position: absolute;
     left: 0;
@@ -34,9 +42,9 @@ nav a:after {
     background-color: white;
     transition: 0.5s linear;
 }
-nav a:hover {
+nav ul a:hover {
     color: #fff;
 }
-nav a:hover:after {
+nav ul a:hover:after {
     width: 100%;
 }
